[fix] Scale on mobile devices

--- a/app/index.css
+++ b/app/index.css
@@ -171,6 +171,10 @@ select {
   min-height: 45vh;
 }
 
+.mobile .blocklyMenuItem {
+  font-size: large;
+}
+
 /* 'Look' icon */
 #look > path {
   display: none;
